--- a/src/app/filme/listar/listar.component.html
+++ b/src/app/filme/listar/listar.component.html
@@ -19,7 +19,7 @@
         <td>{{filme.classificacao}}</td>
         <td>
           <button class="btn btn-info">Update</button>
-          <button class="btn btn-danger">Delete</button>
+          <button (click)="deletarFilme(filme.id)" class="btn btn-danger" style="margin-left: 10px">Delete</button>
 
 
 <!--          <button (click)="employeeDetails(employee.id)" class="btn btn-info" style="margin-left: 10px">Details</button>-->
